--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "colors": "^1.4.0",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "pg-promise": "^10.4.2"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
