--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "run": "node mangoCallsDbWriter.js"
+    "run": "node mangoCallsDbWriter.js",
+    "cost": "node ChertinAPIWriter.js"
   },
   "keywords": [],
   "author": "",
