--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "axios": "^0.19.2",
     "colors": "^1.4.0",
     "moment": "^2.24.0",
+    "mysql": "^2.18.1",
     "pg-promise": "^10.4.2"
   },
   "devDependencies": {
-    "eslint": "^6.1.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
